--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.3.21",
     "dom-to-image": "^2.6.0",
     "expo": "^53.0.12",
     "expo-blur": "~14.1.5",
@@ -34,6 +35,8 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.9",
     "expo-web-browser": "~14.2.0",
+    "nativewind": "^4.1.23",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.4",
@@ -43,7 +46,8 @@
     "react-native-screens": "~4.11.1",
     "react-native-view-shot": "~4.0.3",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -52,9 +56,12 @@
     "@types/react": "~19.0.10",
     "@types/react-dom": "^19.1.5",
     "@types/react-test-renderer": "^18.3.0",
+    "autoprefixer": "^10.4.21",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.7",
+    "postcss": "^8.5.6",
     "react-test-renderer": "^19.0.0",
+    "tailwindcss": "3",
     "typescript": "^5.3.3"
   },
   "private": true
