--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "dom-to-image": "^2.6.0",
     "expo": "^53.0.12",
     "expo-audio": "~0.4.8",
+    "expo-av": "~15.1.7",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.0",
     "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.5",
     "expo-media-library": "~17.1.7",
     "expo-router": "~5.1.0",
