--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.3.21",
     "dom-to-image": "^2.6.0",
-    "expo": "^53.0.12",
+    "expo": "53.0.19",
     "expo-audio": "~0.4.8",
     "expo-av": "~15.1.7",
     "expo-blur": "~14.1.5",
