--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.4",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-haptic-feedback": "^2.3.3",
     "react-native-hr": "^1.1.4",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.17.4",
