upgrade expo to latest 54 version

--- a/app.json
+++ b/app.json
@@ -37,7 +37,8 @@
         }
       ],
       "expo-web-browser",
-      ["expo-image-picker",
+      [
+        "expo-image-picker",
         {
           "photosPermission": "Allow calmnest to access your photos"
         }
