--- a/package.json
+++ b/package.json
@@ -15,57 +15,59 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^15.0.3",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.3.10",
     "dom-to-image": "^2.6.0",
-    "expo": "53.0.20",
-    "expo-audio": "~0.4.8",
-    "expo-av": "~15.1.7",
-    "expo-blur": "~14.1.5",
-    "expo-constants": "~17.1.6",
-    "expo-font": "~13.3.1",
-    "expo-haptics": "~14.1.4",
-    "expo-image": "~2.4.0",
-    "expo-image-picker": "~16.1.4",
-    "expo-linear-gradient": "^14.1.5",
-    "expo-linking": "~7.1.7",
-    "expo-media-library": "~17.1.7",
-    "expo-router": "~5.1.4",
-    "expo-splash-screen": "~0.30.10",
-    "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.10",
-    "expo-web-browser": "~14.2.0",
+    "expo": "^54.0.0",
+    "expo-audio": "~1.1.0",
+    "expo-av": "~16.0.8",
+    "expo-blur": "~15.0.8",
+    "expo-constants": "~18.0.12",
+    "expo-font": "~14.0.10",
+    "expo-haptics": "~15.0.8",
+    "expo-image": "~3.0.11",
+    "expo-image-picker": "~17.0.10",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-linking": "~8.0.10",
+    "expo-media-library": "~18.2.1",
+    "expo-router": "~6.0.19",
+    "expo-splash-screen": "~31.0.12",
+    "expo-status-bar": "~3.0.9",
+    "expo-symbols": "~1.0.8",
+    "expo-system-ui": "~6.0.9",
+    "expo-web-browser": "~15.0.10",
     "nativewind": "^4.1.23",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.5",
-    "react-native-gesture-handler": "~2.24.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-css-interop": "^0.2.1",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-haptic-feedback": "^2.3.3",
     "react-native-hr": "^1.1.4",
     "react-native-paper": "^5.14.5",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-view-shot": "~4.0.3",
-    "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5",
+    "react-native-web": "^0.21.0",
+    "react-native-webview": "13.15.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/dom-to-image": "^2.6.7",
     "@types/jest": "^29.5.12",
-    "@types/react": "~19.0.10",
-    "@types/react-dom": "^19.1.5",
+    "@types/react": "~19.1.17",
+    "@types/react-dom": "^19.1.11",
     "@types/react-test-renderer": "^18.3.0",
     "autoprefixer": "^10.4.21",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.9",
     "postcss": "^8.5.6",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-worklets": "^0.7.1",
     "react-test-renderer": "^19.0.0",
     "tailwindcss": "3",
     "typescript": "^5.3.3"
